[package]
name = "bookish-octo-chainsaw"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
riscv-rt = "*"

[dev-dependencies]
riscv = "0.7.0"

[patch.crates-io]
riscv = { registry-index = "https://github.com/rust-lang//crates.io-index", version = "0.10.1" }
